objects/NCS_Data_Entry_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Skills_Option_2_formula__c</fullName>
        <formula>IF( Multiple_Second_Priority__c &gt;1, &quot;Multiple second priority choices&quot;, 
IF(ISPICKVAL( Skill_choice_Drama__c , &quot;2&quot;) , &quot;Drama&quot;, 
IF(ISPICKVAL( Skill_choice_Enterprise__c , &quot;2&quot;) , &quot;Enterprise&quot;, 
IF(ISPICKVAL( Skill_choice_Media__c , &quot;2&quot;) , &quot;Media&quot;, 
IF(ISPICKVAL( Skill_choice_Music__c , &quot;2&quot;) , &quot;Music&quot;, 
IF(ISPICKVAL( Skill_choice_Photography__c , &quot;2&quot;) , &quot;Photography&quot;, 
IF(ISPICKVAL( Skill_choice_Sport__c , &quot;2&quot;) , &quot;Sport&quot;, 
IF(ISPICKVAL(  Skill_Choice_Art__c  , &quot;2&quot;) , &quot;Art&quot;,
&quot;[None selected]&quot; ))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skills Option 2 formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills_Option_3_formula__c</fullName>
        <formula>IF( Multiple_Third_Priority__c &gt;1, &quot;Multiple third priority choices&quot;, 
IF(ISPICKVAL( Skill_choice_Drama__c , &quot;3&quot;) , &quot;Drama&quot;, 
IF(ISPICKVAL( Skill_choice_Enterprise__c , &quot;3&quot;) , &quot;Enterprise&quot;, 
IF(ISPICKVAL( Skill_choice_Media__c , &quot;3&quot;) , &quot;Media&quot;, 
IF(ISPICKVAL( Skill_choice_Music__c , &quot;3&quot;) , &quot;Music&quot;, 
IF(ISPICKVAL( Skill_choice_Photography__c , &quot;3&quot;) , &quot;Photography&quot;, 
IF(ISPICKVAL( Skill_choice_Sport__c , &quot;3&quot;) , &quot;Sport&quot;, 
IF(ISPICKVAL(  Skill_Choice_Art__c  , &quot;3&quot;) , &quot;Art&quot;, &quot;[None selected]&quot; ))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skills Option 3 formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skin_condition__c</fullName>
        <label>Skin condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Eczema</fullName>
                </value>
                <value>
                    <fullName>Acne</fullName>
                </value>
                <value>
                    <fullName>Psoriasis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skin_condition_notes__c</fullName>
        <formula>IF(
   (
     IF(INCLUDES( Skin_condition__c , &quot;Eczema&quot;), 1, 0)  + 
     IF(INCLUDES( Skin_condition__c , &quot;Acne&quot;), 1, 0)  + 
     IF(INCLUDES( Skin_condition__c , &quot;Psoriasis&quot;), 1, 0)
    ) &gt; 1, &quot;Other&quot;, &quot;&quot;
)</formula>
        <label>Skin condition notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Dietary_Requirements__c</fullName>
        <label>Special Dietary Requirements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Halal</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>No Beef</fullName>
                </value>
                <value>
                    <fullName>No Eggs</fullName>
                </value>
                <value>
                    <fullName>No Pork</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Gluten free Diet</fullName>
                </value>
                <value>
                    <fullName>Other dietary requirements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statement_of_SEN__c</fullName>
        <label>Statement of SEN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stomach_digestive_abdominal_self_managed__c</fullName>
        <label>Stomach/digestive/abdominal self managed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Young person self manages the condition</fullName>
                </value>
                <value>
                    <fullName>Young person needs support with the condition</fullName>
                </value>
                <value>
                    <fullName>Young person will need us to make adjustments for the condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stomach_digestive_or_abdominal_problems__c</fullName>
        <label>Stomach,digestive or abdominal problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Streets__c</fullName>
        <label>Streets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>T_Shirt_size__c</fullName>
        <label>T-Shirt size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>XS/S</fullName>
                </value>
                <value>
                    <fullName>S/M</fullName>
                </value>
                <value>
                    <fullName>M/L</fullName>
                </value>
                <value>
                    <fullName>L/XL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <description>Used to direct WHICH Objects are created (or checked against merge rules if they exist) - If not populated all will be created (young person, parent contact, family account, ncs application, inclusion detail and relationship).</description>
        <label>Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>NCS3P</fullName>
                </value>
                <value>
                    <fullName>EOI?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typical_allergic_reaction_non_food__c</fullName>
        <label>Typical allergic reaction (non-food)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Typical_allergic_reaction_to_food__c</fullName>
        <label>Typical allergic reaction to food</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Which_blood_disorders__c</fullName>
        <label>Which blood disorders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Anaemia</fullName>
                </value>
                <value>
                    <fullName>Sickle Cell</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_the_YP_be_obeserving_Ramadan__c</fullName>
        <label>Will the YP be obeserving Ramadan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No/Does not apply</fullName>
                </value>
                <value>
                    <fullName>Yes/Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YP_Email_address__c</fullName>
        <label>YP Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>YP_First_Name__c</fullName>
        <label>YP First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YP_Home_Phone__c</fullName>
        <label>YP Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>YP_Last_name__c</fullName>
        <label>YP Last name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YP_Mobile_Phone__c</fullName>
        <label>YP Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>YP_Sign_Up_thoughts_1__c</fullName>
        <label>YP Sign Up thoughts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I&apos;ll sign up as soon as i can</fullName>
                </value>
                <value>
                    <fullName>I or my parent/guardian would like some more information before I sign up</fullName>
                </value>
                <value>
                    <fullName>I&apos;m Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YP_Sign_Up_thoughts_formula__c</fullName>
        <formula>IF(ISPICKVAL(
YP_Sign_Up_thoughts_1__c , &quot;I&apos;ll sign up as soon as i can&quot;) , &quot;High&quot;, 
IF(ISPICKVAL
(YP_Sign_Up_thoughts_1__c,&quot;I or my parent/guardian would like some more information before I sign up&quot;), &quot;Low&quot;,
IF(ISPICKVAL( YP_Sign_Up_thoughts_1__c , &quot;I&apos;m Undecided&quot;),&quot;Medium&quot;, &quot; &quot;)))</formula>
        <label>YP Sign Up thoughts formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_done_NCS_before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>YP done NCS before?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YP_done_NCS_before_formula__c</fullName>
        <formula>IF( YP_done_NCS_before__c = FALSE, &quot;HAS NOT done NCS&quot;,  &quot;HAS done NCS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP done NCS before formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_in_or_recently_in_Care__c</fullName>
        <label>YP in (or recently in) Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YP_injuries__c</fullName>
        <label>YP injuries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Broken bones</fullName>
                </value>
                <value>
                    <fullName>Muscle tears</fullName>
                </value>
                <value>
                    <fullName>Tendon or Ligament damage</fullName>
                </value>
                <value>
                    <fullName>Pulled or Strained muscle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YP_prone_to_migranes__c</fullName>
        <label>YP prone to migranes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YP_treated_by_Dr_in_past_2_years__c</fullName>
        <label>YP treated by Dr in past 2 years</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YP_visual_impairment__c</fullName>
        <label>YP visual impairment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Wears glasses and their vision is fully corrected</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>details_of_other_info__c</fullName>
        <label>details of other info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>would_like_to_apply_for_Financial_Suppor__c</fullName>
        <description>I Would like to apply for financial support</description>
        <formula>IF(
    ISPICKVAL(
        Payment_method_preference__c,
        &quot;I Would like to apply for financial support&quot;
    ),

    TODAY(),

    NULL
)</formula>
        <label>Would like to apply for Financial Suppor</label>
        <type>Date</type>
    </fields>
    <label>NCS Data Entry Staging</label>
    <listViews>
        <fullName>AP_Uploads_in_Data_Entry_Staging</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>City_Town__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Parent_First_Name__c</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Process_Record__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>AP Uploads in Data Entry Staging</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve - Owner Alia</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve_B_B_Jade</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Jcham</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve-B&amp;B Jade</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve_Bhm_Rochelle</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Rhadl</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve-Bhm Rochelle</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve_Manc_Ryan</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>rshaw</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve-Manc Ryan</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve_NEL_Colleen</fullName>
        <columns>Postal_Code__c</columns>
        <columns>City_Town__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Cmaho</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve-NEL Colleen</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve_SEL_Holly</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>hdowl</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve-SEL Holly</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve_SWL</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>mauer</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve-SWL</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve_Surrey</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>lboul</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve-Surrey</label>
    </listViews>
    <listViews>
        <fullName>AP_upload_errors_to_resolve_York_Rebekah</fullName>
        <columns>NAME</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>City_Town__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Rcamp</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/15/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>AP upload errors to resolve-York Rebekah</label>
    </listViews>
    <listViews>
        <fullName>APs_to_upload_via_OBS</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>NCS_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>City_Town__c</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>APs to upload via OBS</label>
    </listViews>
    <listViews>
        <fullName>Bradley_s_upload_errors_to_resolve</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>City_Town__c</columns>
        <columns>Parent_First_Name__c</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Process_Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Bradley&apos;s upload errors to resolve</label>
    </listViews>
    <listViews>
        <fullName>JO_AP_upload_errors_to_resolve</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Process_Record__c</columns>
        <columns>NAME</columns>
        <columns>Postal_Code__c</columns>
        <columns>City_Town__c</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>jturn</value>
        </filters>
        <label>JO AP upload errors to resolve</label>
    </listViews>
    <listViews>
        <fullName>Jo_test</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Process_Record__c</columns>
        <columns>NAME</columns>
        <columns>Postal_Code__c</columns>
        <columns>City_Town__c</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2015 12:00 AM</value>
        </filters>
        <label>AP upload errors to resolve</label>
    </listViews>
    <listViews>
        <fullName>MY_AP_upload_errors_to_resolve</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Process_Record__c</columns>
        <columns>NAME</columns>
        <columns>Postal_Code__c</columns>
        <columns>City_Town__c</columns>
        <columns>YP_First_Name__c</columns>
        <columns>YP_Last_name__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>NCS_ID__c</columns>
        <columns>YP_Email_address__c</columns>
        <columns>Parent_Email__c</columns>
        <columns>Force_out_of_to_resolve_view__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Force_out_of_to_resolve_view__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>MY AP upload errors to resolve</label>
    </listViews>
    <nameField>
        <displayFormat>NCSDES-{000000}</displayFormat>
        <label>NCS Data Entry Staging Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCS Data Entry Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Add_Season_and_NCS_Lead_Source</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Template__c, &quot;EOI?&quot;),
    OR(
        ISBLANK(Season__c),
        ISBLANK(TEXT(Initial_Source__c))
    )
)</errorConditionFormula>
        <errorMessage>Please enter relevant values for both NCS Lead source and Season field&apos;s if template = EOI. Please input the following values 
Summer 2016 ID = a2fC000000I7Q6s , Autumn  2016 ID = a2fC000000I7Q6x</errorMessage>
    </validationRules>
</CustomObject>